# rowser

./: .gitignore  Cargo.toml  README.md  package.json
src/: core.rs  gbuffer.rs  main.rs  main_2.rs
src/core/: color.rs  dom.rs  dom2.rs  geometry.rs  gfxbuffer.rs  mod.rs  platform_window.rs  simple_error.rs
src/core/dom/: mod.rs  window_events.rs
src/core/graphic_dom/: gfx_elem.rs  gfx_root.rs  mod.rs
src/core/platform_window/: mod.rs
src/graphic_dom/: mod.rs
src/platform_window/: gbuffer.rs  mod.rs
