[package]
name = "rowser"
version = "0.1.0"
edition = "2021"
authors = ["Magius(CHE) <magiusche@magius.it>"]
homepage = "https://magius.it/rowser"
repository = "https://github.com/magiusche/rowser"
license = "MIT OR Apache-2.0"
keywords = ["browser", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
url = { version = "2"}
log = { version = "0"}
env_logger = { version = "0"}
winit = { version = "0" }